--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,76 @@ include ':java_performance'
 include ':algorithm'
 include ':app'
 rootProject.name = "MyTest"
+gradle.addBuildListener(new BuildListener() {
+    @Override
+    void buildStarted(Gradle gradle) {
+        println '开始构建'
+    }
+
+    @Override
+    void settingsEvaluated(Settings settings) {
+        println 'settings 评估完成'
+    }
+
+    @Override
+    void projectsLoaded(Gradle gradle) {
+        println '项目加载完成'
+    }
+
+    @Override
+    void projectsEvaluated(Gradle gradle) {
+        println '所有项目评估完成'
+    }
+
+    @Override
+    void buildFinished(BuildResult result) {
+        println '构建结束'
+    }
+})
+//有向无环图
+gradle.getTaskGraph().addTaskExecutionGraphListener(new TaskExecutionGraphListener() {
+    @Override
+    void graphPopulated(TaskExecutionGraph graph) {
+
+    }
+})
+
+long beginOfSetting = System.currentTimeMillis()
+def beginOfConfig
+def configHasBegin = false
+def beginOfProjectConfig = new HashMap()
+def beginOfProjectExcute
+gradle.projectsLoaded {
+    println '初始化阶段，耗时：' + (System.currentTimeMillis() -
+            beginOfSetting) + 'ms'
+}
+gradle.beforeProject { project ->
+    if (!configHasBegin) {
+        configHasBegin = true
+        beginOfConfig = System.currentTimeMillis()
+    }
+    beginOfProjectConfig.put(project, System.currentTimeMillis())
+}
+gradle.afterProject { project ->
+    def begin = beginOfProjectConfig.get(project)
+    println '配置阶段，' + project + '耗时：' +
+            (System.currentTimeMillis() - begin) + 'ms'
+}
+gradle.taskGraph.whenReady {
+    println '配置阶段，总共耗时：' + (System.currentTimeMillis() -
+            beginOfConfig) + 'ms'
+    beginOfProjectExcute = System.currentTimeMillis()
+}
+gradle.taskGraph.beforeTask { task ->
+    task.doFirst {
+        task.ext.beginOfTask = System.currentTimeMillis()
+    }
+    task.doLast {
+        println '执行阶段，' + task + '耗时：' +
+                (System.currentTimeMillis() - task.beginOfTask) + 'ms'
+    }
+}
+gradle.buildFinished {
+    println '执行阶段，耗时：' + (System.currentTimeMillis() -
+            beginOfProjectExcute) + 'ms'
+}
